Fix Bug 890378 - Title wrapping on CJKT Manifesto pages

--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -32,7 +32,7 @@
     .title-shadow-box {
         min-height: 80px;
 
-        & + p {
+        & + * {
             clear: left;
         }
     }
